# OpenNoMark

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  start.bat  start.sh
docs/verification/: corpus-full.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css
frontend/src/components/: CompareSlider.tsx  MagneticButton.tsx
opennomark/: __init__.py  api.py  cli.py  detector.py  gemini_alpha.py  inpainter.py  localizer.py  pipeline.py  text_detector.py
opennomark/assets/: gemini_alpha_48.npy  gemini_alpha_96.npy  gemini_detector.json  watermark_detector.json
scripts/: train_gemini_detector.py  train_watermark_detector.py
skill/: opennomark.md
skills/opennomark/: SKILL.md
skills/opennomark/agents/: openai.yaml
tests/: conftest.py  dataset_evaluation.py  test_api.py  test_cli.py  test_dataset_evaluation.py  test_detector.py  test_gemini_alpha.py  test_inpainter.py  test_localizer.py  test_pipeline.py  test_skill.py  test_text_detector.py
