[project]
name = "opennomark"
version = "0.1.0"
description = "AI watermark detection and removal"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "Pillow",
    "opencv-python",
    "numpy",
]

[project.optional-dependencies]
api = ["fastapi", "uvicorn", "python-multipart"]
dev = ["pytest"]

[project.scripts]
opennomark = "opennomark.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opennomark"]
