[project]
name = "opennomark"
version = "0.2.0"
description = "Remove visible watermarks from AI-generated images"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "Pillow",
    "opencv-python",
    "numpy",
]

[project.optional-dependencies]
api = ["fastapi", "uvicorn", "python-multipart"]
dev = ["pytest"]

[project.scripts]
opennomark = "opennomark.cli:main"

[project.urls]
Homepage = "https://github.com/NanmiCoder/OpenNoMark"
Repository = "https://github.com/NanmiCoder/OpenNoMark"
Issues = "https://github.com/NanmiCoder/OpenNoMark/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opennomark"]
